--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -22,4 +22,4 @@ jobs:
         java-version: '15'
         distribution: 'zulu'
     - name: Build with Maven
-      run: mvn install --file pom.xml
+      run: mvn install
