--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,25 +1,43 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
-name: Java CI with Maven
+name: Appium Android
 
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
-
+    
+    
 jobs:
   build:
-
+  
+  
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        api-level: [25]
+        target: [default]
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 15
       uses: actions/setup-java@v2
       with:
-        java-version: '15'
+        java-version: '11'
         distribution: 'zulu'
-    - name: Build with Maven
-      run: mvn install
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '12'
+    - run:
+          npm install -g appium@v1.20.2
+          appium -v
+          appium &>/dev/null &
+    - name: Run Appium Tests
+      uses: reactivecircus/android-emulator-runner@v1
+      with:
+        api-level: ${{ matrix.api-level }}
+        target: ${{ matrix.target }}
+        arch: x86_64
+        profile: Nexus 6
+        script: mvn clean test -Pandroid
