Edit Appium Server Action To Use Ubuntu

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -34,7 +34,7 @@ jobs:
           appium -v
           appium &>/dev/null &
     - name: Run Appium Tests
-      uses: reactivecircus/android-emulator-runner@v1
+      uses: moatazeldebsy/appium-server-gitHub-action@V1.0.4
       with:
         api-level: ${{ matrix.api-level }}
         target: ${{ matrix.target }}
