--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Set up JDK 15
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '15'
         distribution: 'zulu'
     - uses: actions/setup-node@v2
       with:
@@ -41,3 +41,5 @@ jobs:
         arch: x86_64
         profile: Nexus 6
         script: mvn clean test -Pandroid
+    - name: Run All Tests
+      run: mvn test
