--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -4,42 +4,34 @@
 name: Appium Android
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
-    
-    
+    branches: [ main ]
+
 jobs:
   build:
-  
-  
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     strategy:
       matrix:
-        api-level: [25]
+        api-level: [25]  
         target: [default]
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 15
-      uses: actions/setup-java@v2
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        java-version: '15'
-        distribution: 'zulu'
+        java-version: 1.8
     - uses: actions/setup-node@v2
       with:
-        node-version: '12'
-    - run:
-          npm install -g appium@v1.20.2
-          appium -v
-          appium &>/dev/null &
+       node-version: '12'
+    - run: |
+            npm install -g appium@v1.20.2
+            appium -v
+            appium &>/dev/null &
     - name: Run Appium Tests
-      uses: moatazeldebsy/appium-server-gitHub-action@V1.0.4
+      uses: reactivecircus/android-emulator-runner@v1
       with:
         api-level: ${{ matrix.api-level }}
         target: ${{ matrix.target }}
         arch: x86_64
         profile: Nexus 6
         script: mvn clean test -Pandroid
-    - name: Run All Tests
-      run: mvn test
